--- a/index.html
+++ b/index.html
@@ -7,37 +7,39 @@
     <title>Document</title>
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
-    <form id="myForm">
+    <form id="myForm" class="container">
         <fieldset>
-            <legend>Clase Lapiz</legend>
-            <label>Color</label>
-            <input type="color" name="color"><br>
-            <label>Dimension</label>
-            <input type="range" name="dimension"><br>
+            <h1>Clase Lapiz</h1><br>
+            <label>Color: </label><br>
+            <input type="color" name="color" class="width-color"><br>
+            <label>Dimension: </label><br>
+            <input type="range" name="dimension" class="width-rango" min="0" max="20"><br>
+            <fieldset><br>
+                <h3>Marca</h3>
+                <input type="radio" name="marca" value="Mongo"> <label>Mongo</label><br>
+                <input type="radio" name="marca" value="Norma"> <label>Norma</label><br>
+                <input type="radio" name="marca" value="Fabel Castle"> <label>Fabel Castle</label><br>
+                <input type="radio" name="marca" value="Big"> <label>Big</label><br>
+            </fieldset><br>
             <fieldset>
-                <legend>Marca</legend>
-                <input type="radio" name="marca" value="Mongo"><label>Mongo</label><br>
-                <input type="radio" name="marca" value="Norma"><label>Norma</label><br>
-                <input type="radio" name="marca" value="Fabel Castle"><label>Fabel Castle</label><br>
-                <input type="radio" name="marca" value="Big"><label>Big</label><br>
-            </fieldset>
+                <h3>Borrador</h3>
+                <input type="radio" name="borrador" value="true"> <label>Tiene</label><br>
+                <input type="radio" name="borrador" value="false"> <label>No tiene</label><br>
+            </fieldset><br>
             <fieldset>
-                <legend>Borrador</legend>
-                <input type="radio" name="borrador" value="true"><label>Tiene</label><br>
-                <input type="radio" name="borrador" value="false"><label>No tiene</label><br>
-            </fieldset>
-            <fieldset>
-                <legend>Material</legend>
-                <input type="radio" name="material" value="Madera"><label>Madera</label><br>
-                <input type="radio" name="material" value="Goma"><label>Goma</label><br>
-            </fieldset>
-            <input type="submit" value="Enviar">
+                <h3>Material</h3>
+                <input type="radio" name="material" value="Madera"> <label>Madera</label><br>
+                <input type="radio" name="material" value="Goma"> <label>Goma</label><br>
+            </fieldset><br>
+            <input type="submit" value="Enviar" id="send">
         </fieldset>
     </form>
     <br><br><br>
-    <table border="solid">
+    <table class="table-warning border-dark table container text-center">
         <thead>
             <tr>
                 <th>Color</th>
@@ -51,5 +53,6 @@
 
         </tbody>
     </table>
+    <br><br><br>
 </body>
 </html>
